--- a/server/djangoapp/templates/djangoapp/index.html
+++ b/server/djangoapp/templates/djangoapp/index.html
@@ -12,11 +12,12 @@
     <script src="https://unpkg.com/bootstrap-table@1.18.2/dist/extensions/filter-control/bootstrap-table-filter-control.min.js"></script>
 
 </head>
-
     <body>
-    <!-- Remove this line the first time you edit this file -->
-     This is the index page of your Django app!
-    <!--Add a nav bar here -->
+        <nav>
+            <a href="/djangoapp/about">ABOUT</a> | 
+
+            <a href="/djangoapp/contact">CONACT US</a> 
+        </nav>
 
     <!--Add a dealer table here -->
 
